name:               ultra-core
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2017
synopsis:           Ultra base
category:           Data
description:        Ultra Base
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Preamble
                        Ultra.Control.Applicative
                        Ultra.Data.Either
                        Ultra.Data.Foldable
                        Ultra.Data.List
                        Ultra.Data.NonZero
                        Ultra.Data.Ord
                        Ultra.Data.Ratio
                        Ultra.Data.RealFrac

    default-extensions: NoImplicitPrelude

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   domdere-preamble
                    ,   lab-core
                    ,   QuickCheck          == 2.10.*
                    ,   ultra-either
                    ,   ultra-core

    other-modules:      Test.Ultra.Control.Applicative
                        Test.Ultra.Data.Either
                        Test.Ultra.Data.Foldable
                        Test.Ultra.Data.NonZero
                        Test.Ultra.Data.Ord
                        Test.Ultra.Data.Ratio
                        Test.Ultra.Data.RealFrac


    default-extensions: NoImplicitPrelude
                        TemplateHaskell
