name:               ultra-exceptions
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Ultra Exceptions
category:           Data
description:        Ultra Exceptions
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   exceptions              == 0.8.*
                    ,   ultra-core
                    ,   ultra-either
                    ,   ultra-text
                    ,   transformers            > 0.3 && <= 0.6

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Control.Monad.Bracket
                        Ultra.Control.Monad.Catch

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   domdere-preamble
                    ,   exceptions          == 0.8.*
                    ,   lab-core
                    ,   ultra-either
                    ,   ultra-exceptions

    other-modules:      Test.Ultra.Control.Monad.Bracket
