name:               ultra-haskeline
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2017
synopsis:           Haskeline, but more Ultra
category:           System
description:        Haskeline, but more Ultra
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   domdere-preamble
                    ,   haskeline      == 0.7.*
                    ,   ultra-either

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.System.Console.Haskeline
                        Ultra.System.Console.Haskeline.Completion
                        Ultra.System.Console.Haskeline.History
                        Ultra.System.Console.Haskeline.IO
                        Ultra.System.Console.Haskeline.MonadException

test-suite              test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    build-depends:      base                >= 4 && < 5
                    ,   domdere-preamble
                    ,   lab-core
                    ,   ultra-haskeline

    default-extensions: NoImplicitPrelude
                        TemplateHaskell
