name:               ultra-semigroups-lens
version:            0.0.1
license:            BSD3
license-file:       ../etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2016
synopsis:           lenses folds and traversals for ultra-semigroups
category:           Data
description:        lenses folds and traversals for ultra-semigroups
homepage:           https://github.com/domdere/ultra
bug-reports:        https://github.com/domdere/ultra/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/ultra.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array
                    ,   preamble
                    ,   ultra-lens
                    ,   ultra-semigroups

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Ultra.Data.List.NonEmpty.Lens

    default-extensions: NoImplicitPrelude

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   lab-core
                    ,   lab-lens
                    ,   preamble
                    ,   ultra-semigroups-lens

    default-extensions: NoImplicitPrelude
                        TemplateHaskell
